OPENNLP-1541 Conduct cleanup in opennlp.tools.chunker package